--- a/css/lab9.css
+++ b/css/lab9.css
@@ -39,6 +39,14 @@ h4 {
     text-align: center;
    
 }
+p {
+    text-shadow: black 1px 0 10px;
+    margin-top: -60px;
+    color:white; 
+    font-size:50px;
+    text-align: center;
+   
+}
 i{
     color:white;
     text-shadow: 1px 1px 2px black;
