--- a/css/lab9.css
+++ b/css/lab9.css
@@ -2,7 +2,6 @@ body {
     background-color: SlateGrey;
    
 }
-
 #lab9 {
     padding: 0px 10px;
     border: 100px solid;
@@ -15,7 +14,28 @@ body {
     background:LightSlateGray;
       
 }
+#oned{
+    padding: 0px 10px;
+    border: 100px solid;
+    border-width: thin;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    background:LightSlateGray;
+}
+#two{
 
+    padding: 0px 10px;
+    border: 100px solid;
+    border-width: thin;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    background:LightSlateGray;
+      
+}
 .card {
     margin-top: 40px;
     color:white;
@@ -53,3 +73,295 @@ i{
     font-size:50px;
     text-align: center; 
 }
+
+.three{
+    padding: 0px 10px;
+    border: 100px solid;
+    border-width: thin;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    background:LightSlateGray;
+}
+.four{
+    padding: 0px 10px;
+    border: 100px solid;
+    border-width: thin;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    background:LightSlateGray;
+}
+.five{
+    padding: 0px 10px;
+    border: 100px solid;
+    border-width: thin;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    background:LightSlateGray;
+}
+.six{
+    padding: 0px 10px;
+    border: 100px solid;
+    border-width: thin;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    background:LightSlateGray;
+}
+.seven{
+    padding: 0px 10px;
+    border: 100px solid;
+    border-width: thin;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    background:LightSlateGray;
+}
+.seven{
+    padding: 0px 10px;
+    border: 100px solid;
+    border-width: thin;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    background:LightSlateGray;
+}
+.first{
+position: relative;
+top: 100px;
+
+
+}
+.first2{
+    position: relative;
+    top: 100px;
+}
+.second{
+    position: relative;
+    top: 100px;
+}
+.second2{
+
+    position: relative;
+    top: 100px;
+}
+.third{
+   
+    position: relative;
+    top: 100px;
+
+}
+.third2{
+    
+    position: relative;
+    top: 100px;
+}
+
+.fours{
+
+    position: relative;
+    top: 100px;
+
+}
+.fours2
+
+{
+    
+    position: relative;
+    top: 100px;
+}
+.fives{
+   
+    position: relative;
+    top: 100px;
+
+}
+.fives2
+{
+ 
+    position: relative;
+    top: 100px;
+}
+.sixs{
+  
+    position: relative;
+    top: 100px;
+
+}
+.sixs2
+{
+   
+    position: relative;
+    top: 100px;
+}
+.sevens
+{
+   
+    position: relative;
+    top: 100px;
+
+}
+.sevens2
+{
+    
+    position: relative;
+    top: 100px;
+}
+#body_button{
+  background: #000;
+  height: 300px;
+  margin: 0;
+  padding: 0;
+  color: #ddf;
+  background-color: #112;
+  text-align: center;
+  padding-top: 12vh;
+}
+.button_hola,
+.button_hola::before,
+.button_hola::after,
+.button_hola span,
+.button_hola span::before,
+.button_hola span::after
+{
+  transition: all ease .5s;
+}
+ 
+.button_hola{
+  position: relative;
+  display: inline-block;
+  padding: 0.3em;
+  margin: 1em;
+  border: solid 1px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+ 
+.button_hola:hover
+{
+  box-shadow: 0 0 5em .5em rgba(50,50,150,0.5);
+}
+ 
+.button_hola span
+{
+  display: inline-block;
+  width: 100%;
+  padding: 0.6em 2em;
+}
+ 
+.button_hola:hover span
+{
+  color: black;
+}
+ 
+.button_hola::before,
+.button_hola::after,
+.button_hola span::before,
+.button_hola span::after
+{
+  content: '';
+  position: absolute;
+  border: 1px;
+}
+ 
+.button_hola::before,
+.button_hola span::before
+{
+  border-style: solid none;  
+}
+ 
+.button_hola::before,
+.button_hola span::after{      
+  left: 0;
+  top: -0.4em;
+  width: 100%; 
+  height: calc(100% + 0.8em);
+}
+ 
+.button_hola::after,
+.button_hola span::after
+{
+  border-style: none solid;   
+}
+ 
+.button_hola::after,
+.button_hola span::before
+{
+  top: 0;
+  left: -0.4em;
+  height: 100%;
+  width: calc(100% + 0.8em); 
+}
+ 
+.button_hola:hover::after,
+.button_hola:hover span::after
+{
+  transform: scaleY(0);
+}
+ 
+.button_hola:hover::before,
+.button_hola:hover span::before
+{
+  transform: scaleX(0);
+}
+ 
+.button_hola:hover span::after,
+.button_hola:hover span::before
+{
+  opacity: 0;
+}
+
+
+  .grid{
+    display:grid;
+   grid-template-columns: repeat(6,2fr);
+   grid-template-rows: repeat(6,400px);
+  }
+ 
+
+
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
+  }
+
+  h5{
+    text-align: center;
+  }
+
+  .container{
+    position: relative;
+    text-align: center;
+    bottom: 20px;
+    color: rgb(119, 22, 22);
+  }
+  h3{
+    position: absolute;
+    top:60%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-shadow: #fc0 1px 0 10px;
+  }
